Reestruturação completa: biblioteca leve, Javalin 7.2.2, detecção de dependências ausentes, docs e README
Dependências e empacotamento
- JAR sem dependências de terceiros (185 KB): todas movidas para scope optional
  (Lombok para provided, com annotationProcessorPaths no maven-compiler-plugin)
- Removidas dependências não utilizadas: okhttp, jcodec/jcodec-javase, slf4j-simple
- Novo pacote dependencies/ com Dependencies (detecção via Class.forName, cache de
  presença, mensagens padronizadas Maven/Gradle) e MissingDependencyException
- Guards de dependência em todos os módulos: AngatuLib, JavalinAPI, Saveable,
  GsonAPI, Env, Password, EmailAPI, WebPushAPI, Bot, DeepSeek, QRCodeAPI, BrowserAPI
- Remoção de classloads quebravam a inicialização (static init de Env e WebPushAPI,
  static block do Saveable) — agora lazy e com mensagens claras

Javalin
- Atualizado javalin 7.2.0 -> 7.2.2 e javalin-ssl 7.1.0 -> 7.2.2
- Compatibilidade total: unsafe.routes, SslPlugin, Context, Location mantidos
- Otimizações no JavalinAPI: hash de IP com tabela hexadecimal, cache de regex de
  padrões de path, Set estático de métodos HTTP

Correções de bugs
- Console: NPE quando usado antes da inicialização do AngatuLib (resolução lazy
  com fallback para System.out)
- TypeAdapters de datas: in.peek() == null nunca era verdadeiro; JSON null quebrava
  a desserialização (agora JsonToken.NULL + nextNull())
- Console.error com Throwable no meio dos argumentos impedia stack traces em ~30
  chamadas (Task, AssetsAPI, JavalinAPI, WebPushAPI, Bot, DeepSeek, MercadoPagoAPI)
- Placeholders "{}" incompatíveis com o Console printf-style (WebPushAPI, Bot,
  DeepSeek) convertidos para %s
- Request.Response (inner) duplicava Response.java: unificados em uma única API
  (Response ganhou getStatusCode(), getCode() e isSuccess() de forma aditiva)
- WebPushAPI: BouncyCastleProvider lazy, CloseableHttpClient compartilhado (antes
  um pool por envio), GsonAPI no lugar de new Gson(), printStackTrace removido
-